--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "browserslist-config",
+  "name": "browserslist-config-shareable",
   "version": "1.0.0",
   "description": "Shareable Browserslist Config",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kbizukov/browserslist-config.git"
+    "url": "git+https://github.com/kbizukov/browserslist-config-shareable.git"
   },
   "author": "Kirill Bizukov",
   "license": "MIT"
